objects/CN_Sales_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>CN_Confirmed_Value__c</fullName>
        <label>Confirmed Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CNY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_DN_Item__c</fullName>
        <label>DN Item</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_DN_Number__c</fullName>
        <label>DN Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Delilvery_Status__c</fullName>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A-Not yet processed</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B-Partially processed</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C-Completely processed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Discount_Rate__c</fullName>
        <label>Discount Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CN_Gross_Weight__c</fullName>
        <label>Gross Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Item_Reject_Reason__c</fullName>
        <label>Reason for rejection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>71</fullName>
                    <label>71-No Stock</label>
                </value>
                <value>
                    <fullName>72</fullName>
                    <label>72-Short Shelf Life</label>
                </value>
                <value>
                    <fullName>73</fullName>
                    <label>73-Stock Difference</label>
                </value>
                <value>
                    <fullName>74</fullName>
                    <label>74-Price Issue</label>
                </value>
                <value>
                    <fullName>75</fullName>
                    <label>75-Package Issue</label>
                </value>
                <value>
                    <fullName>76</fullName>
                    <label>76-No Certification</label>
                </value>
                <value>
                    <fullName>77</fullName>
                    <label>77-Transport</label>
                </value>
                <value>
                    <fullName>78</fullName>
                    <label>78-MOQ issue</label>
                </value>
                <value>
                    <fullName>79</fullName>
                    <label>79-Sales Issue</label>
                </value>
                <value>
                    <fullName>80</fullName>
                    <label>80-Others</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Material_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Order Item</relationshipLabel>
        <relationshipName>Sales_Order_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Net_Value__c</fullName>
        <label>Net Value</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Net_Weight__c</fullName>
        <label>Net Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Order_Number__c</fullName>
        <label>Sales Order Number</label>
        <referenceTo>CN_Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Order Item</relationshipLabel>
        <relationshipName>Sales_Order_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Overall_Status__c</fullName>
        <label>Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A-Not yet processed</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B-Partially processed</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C-Completely processed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Plant__c</fullName>
        <label>Plant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P010</fullName>
                    <label>P010-SINODIS ShangHai</label>
                </value>
                <value>
                    <fullName>P011</fullName>
                    <label>P011-SINODIS ShangHai External</label>
                </value>
                <value>
                    <fullName>P012</fullName>
                    <label>P012-Regional Warehouse</label>
                </value>
                <value>
                    <fullName>P020</fullName>
                    <label>P020-SINODIS BeiJing</label>
                </value>
                <value>
                    <fullName>P030</fullName>
                    <label>P030-SINODIS ShenZhen</label>
                </value>
                <value>
                    <fullName>P040</fullName>
                    <label>P040-SINODIS GuangZhou</label>
                </value>
                <value>
                    <fullName>P050</fullName>
                    <label>P050-SINODIS Chengdu</label>
                </value>
                <value>
                    <fullName>P060</fullName>
                    <label>P060-SINODIS Dalian</label>
                </value>
                <value>
                    <fullName>P070</fullName>
                    <label>P070-SINODIS Tianjin</label>
                </value>
                <value>
                    <fullName>P080</fullName>
                    <label>P080-SINODIS Xi&apos;an</label>
                </value>
                <value>
                    <fullName>P091</fullName>
                    <label>P091-SINODIS ShangHai DUMMY externa</label>
                </value>
                <value>
                    <fullName>P092</fullName>
                    <label>P092-SINODIS BeiJing DUMMY external</label>
                </value>
                <value>
                    <fullName>P093</fullName>
                    <label>P093-SINODIS ShenZhen DUMMY externa</label>
                </value>
                <value>
                    <fullName>P094</fullName>
                    <label>P094-SINODIS GuangZhou DUMMY extern</label>
                </value>
                <value>
                    <fullName>P095</fullName>
                    <label>P095-SINODIS ChengDu DUMMY external</label>
                </value>
                <value>
                    <fullName>P096</fullName>
                    <label>P096-SINODIS Dalian DUMMY external</label>
                </value>
                <value>
                    <fullName>P097</fullName>
                    <label>P097-SINODIS Tianjin DUMMY external</label>
                </value>
                <value>
                    <fullName>P098</fullName>
                    <label>P098-SINODIS Xi&apos;an DUMMY external</label>
                </value>
                <value>
                    <fullName>P610</fullName>
                    <label>P610-BSI(Tianjin) Foods Co.Ltd</label>
                </value>
                <value>
                    <fullName>P611</fullName>
                    <label>P611-BSI Tianjin Sales</label>
                </value>
                <value>
                    <fullName>P615</fullName>
                    <label>P615-BSI ChengDu Sales</label>
                </value>
                <value>
                    <fullName>P616</fullName>
                    <label>P616-BSI GuangZhou Sales</label>
                </value>
                <value>
                    <fullName>P617</fullName>
                    <label>P617-BSI Xi&apos;An Sales</label>
                </value>
                <value>
                    <fullName>P618</fullName>
                    <label>P618-BSI Shanghai Sales</label>
                </value>
                <value>
                    <fullName>P619</fullName>
                    <label>P619-BSI Shanghai Sales External</label>
                </value>
                <value>
                    <fullName>P810</fullName>
                    <label>P810-Gerard (Tianjin) Food Co.,Ltd</label>
                </value>
                <value>
                    <fullName>P811</fullName>
                    <label>P811-Gerard Tianjin Sales</label>
                </value>
                <value>
                    <fullName>P812</fullName>
                    <label>P812-Gerard ShangHai Sales External</label>
                </value>
                <value>
                    <fullName>P813</fullName>
                    <label>P813-Gerard BeiJing</label>
                </value>
                <value>
                    <fullName>P814</fullName>
                    <label>P814-Gerard GuangZhou</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Product_Code__c</fullName>
        <formula>CN_Material_Number__r.CN_SKU_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Description_CN__c</fullName>
        <formula>CN_Material_Number__r.CN_SKU_Description_CN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Description CN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Description_EN__c</fullName>
        <formula>CN_Material_Number__r.CN_SKU_Description_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Description EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Unit__c</fullName>
        <label>Sales Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Total_Amount_With_Tax__c</fullName>
        <formula>CN_Tax_Amount__c  +  CN_Net_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Up_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Item Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Uploading_Point__c</fullName>
        <label>Uploading Point</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Weight_Unit__c</fullName>
        <label>Weight Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Item</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Sales Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Item</pluralLabel>
    <recordTypes>
        <fullName>CN_Sales_Order_Item</fullName>
        <active>true</active>
        <label>CN Sales Order Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>